# shopping-agent

./: LICENSE  README.md
01_basic/basic/: .env_backup  .gitignore
01_basic/basic/src/basic/: main.py
02_basic_shopping/basic/: README.md  pyproject.toml
02_basic_shopping/basic/src/basic/: main.py
