[project]
name = "basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zia Khan", email = "ziaukhan@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.4.7",
    "autogen-ext[openai]>=0.4.7",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]

[project.scripts]
basic = "basic.main:run_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
